--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,6 +32,6 @@
       "source": "Git Bash"
     }
   },
-  "terminal.integrated.defaultProfile.windows": "Git Bash",
+  // "terminal.integrated.defaultProfile.windows": "Git Bash",
   "window.zoomLevel": 0
 }
